Finished Scene rendering
Switched to working on obj loading

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
   <script src="scene.js"></script>
   <script src="main.js"></script>
+  <script src="obj.js"></script>
   <head>
     <title>Renderer</title>
   </head>
