Added shading constants

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
   <!-- Gui because I'm way too lazy -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+  <script src="utils.js"></script>
   <script src="scene.js"></script>
   <script src="main.js"></script>
   <script src="obj.js"></script>
