--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
   <script src="scene.js"></script>
   <script src="main.js"></script>
   <script src="obj.js"></script>
+  <script src="bamboo.js"></script>
   <head>
     <title>Renderer</title>
   </head>
