Added mountains and seal

--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,10 @@
   <script src="main.js"></script>
   <script src="obj.js"></script>
   <script src="bamboo.js"></script>
+  <script src="object_manager.js"></script>
+  <script src="mountain.js"></script>
   <head>
-    <title>Renderer</title>
+    <title>Ink Renderer</title>
   </head>
   <body>
   <center>
