--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
   <script src="main.js"></script>
   <script src="obj.js"></script>
   <script src="bamboo.js"></script>
+  <script src="koi.js"></script>
   <script src="object_manager.js"></script>
   <script src="mountain.js"></script>
   <head>
