Added grass and unified API

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
   <script src="koi.js"></script>
   <script src="object_manager.js"></script>
   <script src="mountain.js"></script>
+  <script src="grass.js"></script>
   <head>
     <title>Ink Renderer</title>
   </head>
